[webui] fixed searchbox text clipping

--- a/internal/www/assets/static/tailwind.css
+++ b/internal/www/assets/static/tailwind.css
@@ -554,24 +554,8 @@ video {
   display: none;
 }
 
-.static {
-  position: static;
-}
-
-.fixed {
-  position: fixed;
-}
-
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
-}
-
-.sticky {
-  position: sticky;
 }
 
 .m-2 {
@@ -611,6 +595,10 @@ video {
   margin-right: 0px;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mr-auto {
   margin-right: auto;
 }
@@ -621,6 +609,14 @@ video {
 
 .mt-1 {
   margin-top: 0.25rem;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .flex {
@@ -679,10 +675,6 @@ video {
   width: 100%;
 }
 
-.w-10 {
-  width: 2.5rem;
-}
-
 .min-w-40 {
   min-width: 10rem;
 }
@@ -697,30 +689,6 @@ video {
 
 .table-fixed {
   table-layout: fixed;
-}
-
-.scroll-m-0 {
-  scroll-margin: 0px;
-}
-
-.break-before-auto {
-  -moz-column-break-before: auto;
-       break-before: auto;
-}
-
-.break-before-avoid {
-  -moz-column-break-before: avoid;
-       break-before: avoid;
-}
-
-.break-before-left {
-  -moz-column-break-before: left;
-       break-before: left;
-}
-
-.break-before-right {
-  -moz-column-break-before: right;
-       break-before: right;
 }
 
 .flex-wrap {
@@ -743,24 +711,8 @@ video {
   gap: 1rem;
 }
 
-.text-ellipsis {
-  text-overflow: ellipsis;
-}
-
 .text-nowrap {
   text-wrap: nowrap;
-}
-
-.text-balance {
-  text-wrap: balance;
-}
-
-.text-pretty {
-  text-wrap: pretty;
-}
-
-.break-words {
-  overflow-wrap: break-word;
 }
 
 .break-all {
@@ -854,6 +806,18 @@ video {
   padding-top: 0.25rem;
 }
 
+.pr-5 {
+  padding-right: 1.25rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .text-left {
   text-align: left;
 }
@@ -864,38 +828,6 @@ video {
 
 .text-right {
   text-align: right;
-}
-
-.text-justify {
-  text-align: justify;
-}
-
-.text-start {
-  text-align: start;
-}
-
-.text-end {
-  text-align: end;
-}
-
-.align-baseline {
-  vertical-align: baseline;
-}
-
-.align-top {
-  vertical-align: top;
-}
-
-.align-bottom {
-  vertical-align: bottom;
-}
-
-.align-text-top {
-  vertical-align: text-top;
-}
-
-.align-text-bottom {
-  vertical-align: text-bottom;
 }
 
 .text-base {
@@ -910,10 +842,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.will-change-scroll {
-  will-change: scroll-position;
 }
 
 .hover\:bg-fifth-main:hover {
